# cg-2015-lib

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  base__functions_8h.html  base__functions_8h.js  base__functions_8h_source.html  cg2d-exemplo_8h_source.html  classes.html  dir_0fcf222af7501824afb33d0ed711e4a7.html  dir_0fcf222af7501824afb33d0ed711e4a7.js  dir_15a62d1bc2728e660b4d38825d314d95.html  dir_15a62d1bc2728e660b4d38825d314d95.js  dir_2ff2b9a54183534fb41cafd677ec36b8.html  dir_2ff2b9a54183534fb41cafd677ec36b8.js  dir_5b54e47f08696bee52eec2bb7867d121.html  dir_5b54e47f08696bee52eec2bb7867d121.js  dir_6a71f807dd2f4789443bd35bf8d56473.html  dir_6a71f807dd2f4789443bd35bf8d56473.js  dir_934f46a345653ef2b3014a1b37a162c1.html  dir_934f46a345653ef2b3014a1b37a162c1.js  dir_a99add7960f44da29f7cee7d599370d1.html  dir_a99add7960f44da29f7cee7d599370d1.js  dir_c6bff37b066c83d0403fc224f196bb21.html  dir_c6bff37b066c83d0403fc224f196bb21.js  dir_ffd6b43e6eabf678e7ab3469a47c6575.html  dir_ffd6b43e6eabf678e7ab3469a47c6575.js  doxigen-conf  doxygen.css  doxygen_sqlite3.db  example_8h_source.html  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  md__g_1__programming__workspace__git_hub_cg-2015-lib__r_e_a_d_m_e.html  (+42 more)
debug/: compile  debug  monitor_debug.c
header/: base_functions.h  console_input.h  line.h  monitor_cthulhu.h  object2d_functions.h  object3d_functions.h  scanLine.h  structs.h
html/: _create_circle_8c.html  _create_circle_8c.js  _r_e_a_d_m_e_8md.html  annotated.html  annotated.js  (+67 more)
(+104 files in other folders)
